--- a/Website/header.css
+++ b/Website/header.css
@@ -1,5 +1,6 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 #menu {
@@ -19,7 +20,7 @@
     text-decoration: none;
     padding: 17px;
     display: inline-block;
-    color: white ;
+    color: aliceblue;
     /* display: flex;
     justify-content: center; */
     }
