--- a/Website/header.css
+++ b/Website/header.css
@@ -2,46 +2,37 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#menu {
-    list-style-type: none;
-    display: grid;
-    grid-auto-flow: column;
-    padding: 0;
-    gap: 21px;
-    justify-content: center;
-    /* margin-left: 20%; */
-    }
-#menu li {
-    float: left;
-}
-#menu li a {
-    font-weight: bold;
-    text-decoration: none;
-    padding: 17px;
-    display: inline-block;
-    color: white ;
-    /* display: flex;
-    justify-content: center; */
-    }
-#menu li a:hover {
-    background-color: aqua;
-    color: brown;
-}
 .container {
     width: 100%;
     background-color: rgb(207, 173, 173);
-    overflow: hidden;
+   
     margin: 0;
-    position: sticky;
+    /* position: sticky; */
     top: 0;
+    height: 90px;
 }
 .logo {
     width: 17%;
     float: left;
 }
 .menu {
+    margin-top: 15px;
     width: 58%;
+    text-align: center;
     float: left;
+}
+.menu a:hover {
+    background-color: rgb(76, 247, 9);
+    color: brown;
+
+}
+.menu a{
+ 
+    text-decoration: none;
+    padding: 5px;
+    float: none;
+    margin: 10px;
+   
 }
 .search {
     width: 25%;
@@ -53,11 +44,34 @@ img {
     height: 50px;
     float: left;
     margin-top: 1px;
-    margin-left: 1px;
     margin-left: 10px;
 }
 p {
     text-align: center;
     color: white;
     font-weight:bold;
+}
+.dropdown-main {
+    display: inline;
+    position: relative;
+}
+.dropdown-menu {
+    position: absolute;
+    text-align: center;
+    display: none;
+    right: 0;
+    top: 15px;
+    background-color: blanchedalmond;
+    padding: 5px;
+    width: 80px;
+    height: 80px;
+    margin: 5px;
+}
+.dropdown-menu a:hover {
+    background-color: rgb(218, 133, 5);
+    color: aliceblue;
+}
+
+.dropdown-main:hover .dropdown-menu{
+    display: block;
 }
