--- a/Website-2/style.css
+++ b/Website-2/style.css
@@ -1,22 +1,25 @@
 /* Header */
-*{
+* {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
 }
-.container{
+
+.container {
     width: 100%;
     background-color: bisque;
     overflow: hidden;
 
 }
-.logo{
+
+.logo {
     width: 25%;
     float: left;
     margin-left: 10px;
     margin-top: 7px;
 
 }
-.menu{
+
+.navbar {
     float: left;
     width: 51%;
     display: flex;
@@ -25,30 +28,32 @@
     column-gap: 30px;
 
 }
-.s-menu{
+.dropdown{
     position: relative;
 }
-.dd-menu{
-    display: none;
+.dropdown>.dropdown-content>a {
     position: absolute;
-    background-color: chocolate;
 }
-.sbar{
+
+
+.searchbar {
     float: left;
     width: 20%;
     margin-top: 14px;
 
-    /* background-color: yellowgreen; */
 }
-.menu a{
+
+.navbar a {
     text-decoration: none;
     display: block;
     padding: 15px;
     color: black;
     font-size: large;
+    float: left;
 }
-a:hover{
+
+a:hover {
     background-color: burlywood;
     color: white;
-
+    
 }
